# FindSubstring

./: CMakeLists.txt  README.md  main.cpp
include/: StringSearch.cpp  StringSearch.hpp  TestString.cpp  TestString.hpp
